@@ -120,7 +120,7 @@ FunctionsToExport = 'Add-FontsToBcContainer', 'Add-GitToAlProjectFolder',
                'Renew-LetsEncryptCertificate', 'Repair-BcContainerApp', 
                'Replace-DependenciesInAppFile', 'Restart-BcContainer', 
                'Restore-DatabasesInBcContainer', 'Run-TestsInBcContainer', 
-               'Setup-BcContainerTestUsers', 
+               'Set-BcContainerFeatureKeys', 'Setup-BcContainerTestUsers', 
                'Setup-TraefikContainerForBcContainers', 'Sign-BcContainerApp', 
                'Sort-AppFoldersByDependencies', 'Start-BcContainer', 
                'Start-BcContainerAppDataUpgrade', 'Stop-BcContainer', 
